P/pod-gateway-setter-rPcYogVGbpIB5H5/pod-gateway-setter.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-pod-gateway-setter
  labels:
    helm.sh/chart: pod-gateway-setter-1.0.0
    app.kubernetes.io/name: pod-gateway-setter
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/managed-by: Helm
  annotations: null
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: pod-gateway-setter
    app.kubernetes.io/instance: release-name
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-pod-gateway-setter
  labels:
    helm.sh/chart: pod-gateway-setter-1.0.0
    app.kubernetes.io/name: pod-gateway-setter
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: pod-gateway-setter
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pod-gateway-setter
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: default
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
        - name: release-name-pod-gateway-setter
          image: ghcr.io/k8s-at-home/gateway-admision-controller:v2.0.0
          imagePullPolicy: IfNotPresent
          args:
            - --tls-cert-file-path=/tls/tls.crt
            - --tls-key-file-path=/tls/tls.key
            - --setGatewayDefault
            - --setGatewayLabel=setGateway
            - --setGatewayAnnotation=setGateway
            - --webhook-listen-address=:8080
            - --gateway=10.0.2.7
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /tls
              name: certs
              readOnly: true
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /wh/health
              port: 8080
              scheme: HTTPS
            initialDelaySeconds: 1
            periodSeconds: 10
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /wh/health
              port: 8080
              scheme: HTTPS
            initialDelaySeconds: 1
            periodSeconds: 10
            timeoutSeconds: 10
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /wh/health
              port: 8080
              scheme: HTTPS
            initialDelaySeconds: 0
            periodSeconds: 1
            timeoutSeconds: 1
      volumes:
        - name: certs
          secret:
            secretName: release-name-pod-gateway-setter-webhook-tls
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: release-name-pod-gateway-setter
  labels:
    helm.sh/chart: pod-gateway-setter-1.0.0
    app.kubernetes.io/name: pod-gateway-setter
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/inject-ca-from: default/release-name-pod-gateway-setter-webhook-tls
webhooks:
  - name: release-name-pod-gateway-setter.svc.cluster.local
    namespaceSelector:
      matchLabels:
        routed-gateway: "true"
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
        scope: Namespaced
    clientConfig:
      service:
        namespace: default
        name: release-name-pod-gateway-setter
        path: /wh/mutating/setgateway
        port: 8080
    admissionReviewVersions:
      - v1
      - v1beta1
    sideEffects: None
    timeoutSeconds: 5
